--- a/packages/index.html
+++ b/packages/index.html
@@ -1,25 +1,18 @@
-<script> if ( !(window.location.hostname == "www.implodingdragons.com" || window.location.hostname == "implodingdragons.com") ){
-	document.write('<script type="text/undefined">')} </script>
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Implding Dragons</title>
+    <title>Virtual Voyage</title>
 	<link rel="stylesheet" href="../style.css">
-    <h1><a href="../index.html">Imploding Dragons</a></h1>
+    <h1><a href="../index.html">Virtual Voyage</a></h1>
 </head>
 <body>
-	<h2>Dots</h2>
-	<p>Touch dots of the same colour to get a combo, but don't let them reach the bottom! how high can you go in 1 minute?, <a title="Web Version" href="dots/index.html">Web Version</a> and <a title="Android Version" href="dots/dots.apk">Android Version</a>.</p>
-	<h2>Drop</h2>
-	<p>You are a rain droplet you must combine with other droplets while falling and survive, <a title="Web Version" href="drop/index.html">Web Version</a> and <a title="Android Version" href="drop/Drop.apk">Android Version</a>.</p>
-	<h2>Blood Drive</h2>
-	<p>You are a red blood cell avoid the viruses and see how far you can get!, <a title="Web Version" href="blood_drive/index.html">Web Version</a> and <a title="Android Version" href="blood_drive/Blood_Drive.apk">Android Version</a>.</p>
-	<h2>Last Saviour</h2>
-	<p>You are a zombie but a good zombie! Scare the civilians to the safe houses!, <a title="PC Installer" href="last_saviour.exe">PC Installer</a>.</p>
-	<h2>Intense Zombie Extravaganza</h2>
-	<p>The zombie apocalypse has broken out! You must kill them all! See how many you can kill before being overwhelmed, <a title="PC Zip" href="ize.7z">PC Zip</a>.</p>
+	<h2><a title="Learn more about Virtual Recall" href="virtualrecall/index.html">Virtual Recall</a></h2>
+	<p>Virtual Recall is fdsjfjsjjfsdjhnjhnsdjjn</p>
+	<h2><a title="Learn more about Virtual Story" href="virtualstory/index.html">Virtual Story</a></h2>
+	<p>Virtual Story is fdsjfjsjjfsdjhnjhnsdjjn</p>
+	<h2><a title="Learn more about Virtual Movie" href="virtualmovie/index.html">Virtual Movie</a></h2>
+	<p>Virtual Movie is fdsjfjsjjfsdjhnjhnsdjjn</p>
 </body>
 <footer>
-	<p>Website made by <a title="Learn About me!" href="../aboutme.html">Benjamin Hargrave</a>, Copyright &copy; 2013-2014 <a title="Learn About me!" href="../aboutme.html">Benjamin Hargrave</a></p>
+	<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
 </footer>
 </html>
