--- a/packages/virtualrecall/index.html
+++ b/packages/virtualrecall/index.html
@@ -1,92 +1,14 @@
-<script> if ( !(window.location.hostname == "www.implodingdragons.com" || window.location.hostname == "implodingdragons.com") ){
-	document.write('<script type="text/undefined">')} </script>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title>Implding Dragons</title>
-	<link rel="stylesheet" href="../../style.css">
-	<link rel="stylesheet" href="../../unity.css">
-    <h1><a href="../../index.html">Imploding Dragons</a></h1>
+    <title>Virtual Voyage</title>
+	<link rel="stylesheet" href="../style.css">
+    <h1><a href="../index.html">Virtual Voyage</a></h1>
 </head>
 <body>
-	<script type='text/javascript' src='https://ssl-webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/jquery.min.js'></script>
-	<script type="text/javascript">
-	<!--
-	var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
-	if (document.location.protocol == 'https:')
-		unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
-	document.write('<script type="text\/javascript" src="' + unityObjectUrl + '"><\/script>');
-	-->
-	</script>
-	<script type="text/javascript">
-	<!--
-		var config = {
-			width: 600, 
-			height: 800,
-			params: { enableDebugging:"0" }
-			
-		};
-		var u = new UnityObject2(config);
-
-		jQuery(function() {
-
-			var $missingScreen = jQuery("#unityPlayerDots").find(".missing");
-			var $brokenScreen = jQuery("#unityPlayerDots").find(".broken");
-			$missingScreen.hide();
-			$brokenScreen.hide();
-			
-			u.observeProgress(function (progress) {
-				switch(progress.pluginStatus) {
-					case "broken":
-						$brokenScreen.find("a").click(function (e) {
-							e.stopPropagation();
-							e.preventDefault();
-							u.installPlugin();
-							return false;
-						});
-						$brokenScreen.show();
-					break;
-					case "missing":
-						$missingScreen.find("a").click(function (e) {
-							e.stopPropagation();
-							e.preventDefault();
-							u.installPlugin();
-							return false;
-						});
-						$missingScreen.show();
-					break;
-					case "installed":
-						$missingScreen.remove();
-					break;
-					case "first":
-					break;
-				}
-			});
-			u.initPlugin(jQuery("#unityPlayerDots")[0], "dots.unity3d");
-		});
-	-->
-	</script>
-	<script> if ( !(window.location.hostname == "www.implodingdragons.com" || window.location.hostname == "implodingdragons.com") ){
-	document.write('<script type="text/undefined">')} </script>
-	<div class="dots">
-		<div id="unityPlayerDots">
-			<div class="unitymissing">
-				<a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
-					<img alt="Unity Web Player. Install now!" src="http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
-				</a>
-			</div>
-			<div class="unitybroken">
-				<a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now! Restart your browser after install.">
-					<img alt="Unity Web Player. Install now! Restart your browser after install." src="http://webplayer.unity3d.com/installation/getunityrestart.png" width="193" height="63" />
-				</a>
-			</div>
-		</div>
-	</div>
+	<h2><a title="Learn more about Virtual Recall" href="virtualrecall/index.html">Virtual Recall</a></h2>
+	<p>Virtual Recall is fdsjfjsjjfsdjhnjhnsdjjn</p>
 </body>
 <footer>
-	<p>We have a android version <a href="dots.apk" title="Unity">Here</a>.</p>
-	<p>Created by Imploding Dragons - Ben Hargrave, using the <a href="http://unity3d.com/" title="Unity">Unity Engine.</a></p>
-	<p>Bored? Go back to out list of <a href="../index.html">Games</a></p>
-	<p>Website made by <a title="Learn About me!" href="../../aboutme.html">Benjamin Hargrave</a>, Copyright &copy; 2013-2014 <a title="Learn About me!" href="../../aboutme.html">Benjamin Hargrave</a></p>
+	<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
 </footer>
 </html>
