--- a/packages/virtualmovie/index.html
+++ b/packages/virtualmovie/index.html
@@ -5,8 +5,8 @@
     <h1><a href="../index.html">Virtual Voyage</a></h1>
 </head>
 <body>
-	<h2><a title="Learn more about Virtual Recall" href="virtualrecall/index.html">Virtual Recall</a></h2>
-	<p>Virtual Recall is fdsjfjsjjfsdjhnjhnsdjjn</p>
+	<h2><a title="Learn more about Virtual Movie" href="virtualmovie/index.html">Virtual Movie</a></h2>
+	<p>Virtual Movie is fdsjfjsjjfsdjhnjhnsdjjn</p>
 </body>
 <footer>
 	<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
