Fix broken Links and Linkage

--- a/packages/virtualrecall/index.html
+++ b/packages/virtualrecall/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Virtual Voyage</title>
-	<link rel="stylesheet" href="../style.css">
-    <h1><a href="../index.html">Virtual Voyage</a></h1>
+	<link rel="stylesheet" href="../../style.css">
+    <h1><a href="../../index.html">Virtual Voyage</a></h1>
 </head>
 <body>
 	<h2><a title="Learn more about Virtual Recall" href="virtualrecall/index.html">Virtual Recall</a></h2>
