--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <h1><a href="">Virtual Voyage</a></h1>
 </head>
 <body>
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<div class="background-image toggle-image ia show"></div>
+	<div class="background-image toggle-image ib"></div>
+	<div class="background-image toggle-image ic"></div>
+	<div class="background-image toggle-image id"></div>
+	<div class="background-image toggle-image ie"></div>
+	<div class="background-image toggle-image if"></div>
+	<div class="background-image toggle-image ig"></div>
+	<div class="background-image toggle-image ih"></div>
+	<script src="scripts.js"></script>
 	<<ul class="topmenu">
 		<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
-		<li title="Do you Like Games?" class="submenu">Services/Packages
+		<!--<li title="Do you Like Games?" class="submenu">Services/Packages
 			<ul>
 				<li><a title="List of our Services" href="packages/index.html" >All</a></li>
 				<li><a title="Click for more infomation on Virtual Movie"href="packages/virtualmovie/index.html">Virtual Recall</a></li>
 				<li><a title="Click for more infomation on Virtual Recall"href="packages/virtualrecall/index.html">Virtual Story</a></li>
 				<li><a title="Click for more infomation on Virtual Story" href="packages/virtualstory/index.html">Virtual Movie</a></li>
 			</ul>
-		</li>
+		</li>-->
 		<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>
 		<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=Intrested" target="_top">Contact Us</a>
 	</ul>
