--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<div class="background-image toggle-image ia show"></div>
-	<div class="background-image toggle-image ib"></div>
-	<div class="background-image toggle-image ic"></div>
+	<div class="background-image toggle-image first-image show"></div>
+	<div class="background-image toggle-image second-image"></div>
+	<div class="background-image toggle-image third-image"></div>
 	<script src="scripts.js"></script>
 	<<ul class="topmenu">
 		<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
