--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	<div class="background-image toggle-image first-image show"></div>
 	<div class="background-image toggle-image second-image"></div>
 	<div class="background-image toggle-image third-image"></div>
+	<div class="background-image toggle-image fourth-image"></div>
+	<div class="background-image toggle-image fifth-image"></div>
+	<div class="background-image toggle-image sixth-image"></div>
+	<div class="background-image toggle-image seventh-image"></div>
+	<div class="background-image toggle-image eighth-image"></div>
 	<script src="scripts.js"></script>
 	<<ul class="topmenu">
 		<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
