--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="background-image toggle-image seventh-image"></div>
 	<div class="background-image toggle-image eighth-image"></div>
 	<script src="scripts.js"></script>
-	<div class="center">
+	<!--<div class="center">-->
 		<ul class="topmenu">
 			<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
 			<!--<li title="Do you Like Games?" class="submenu">Services/Packages
@@ -29,7 +29,8 @@
 			</li>-->
 			<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>
 			<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=Intrested" target="_top">Contact Us</a>
-		</ul></div>
+		</ul>
+	<!--</div>-->
 </body>
 <footer>
 	<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
