--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 	</div>
 </body>
 <footer>
-	<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
+	<div class="center"><p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p></div>
 </footer>
 </html>
