--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 		</ul>
 	</div>
 </body>
-<footer>
-	<div class="center"><p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p></div>
-</footer>
+<div class="center">
+	<footer>
+		<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
+	</footer>
+</div>
 </html>
