--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 			<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=Intrested" target="_top">Contact Us</a>
 		</ul>
 	</div>
+
+<div class="footer">Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></div>
 </body>
-	<footer>
-		<p>Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a></p>
-	</footer>
 </html>
