--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Virtual Voyage</title>
 	<link rel="stylesheet" href="style.css">
-    <div class="center"><div class="header"><a href="">Virtual Voyage</a></div></div>
+    <div class="center"><h1><a href="">Virtual Voyage</a></h1></div>
 </head>
 <body>
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
