--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="background-image toggle-image seventh-image"></div>
 	<div class="background-image toggle-image eighth-image"></div>
 	<script src="scripts.js"></script>
-	<div class="center">
+	<div class="centercontext">
 		<ul class="topmenu">
 			<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
 			<!--<li title="Do you Like Games?" class="submenu">Services/Packages
