--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				<li><a title="Click for more infomation on Virtual Recall"href="packages/virtualrecall/index.html">Virtual Story</a></li>
 				<li><a title="Click for more infomation on Virtual Story" href="packages/virtualstory/index.html">Virtual Movie</a></li>
 			</ul>
-		</li>-->
-		<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>
-		<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=Intrested" target="_top">Contact Us</a>
+		</li>
+		<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>-->
+		<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=More Information" target="_top">Contact Us</a>
 	</ul>
 	<div class="footer">Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Virtual Voyage</a></div>
 </body>
