--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="scripts.js"></script>
 	<ul class="topmenu">
 		<!--<li title="Full of Hidden Treasures" class="submenu"><a href="blog">Blog</a></li>-->
-		<li title="What we can do for you!" class="submenu">Services/Packages
+		<!--<li title="What we can do for you!" class="submenu">Services/Packages
 			<ul>
 				<li><a title="List of our Services" href="packages/index.html" >All</a></li>
 				<li><a title="Click for more infomation on Virtual Movie"href="packages/virtualmovie/index.html">Virtual Recall</a></li>
@@ -26,7 +26,7 @@
 				<li><a title="Click for more infomation on Virtual Story" href="packages/virtualstory/index.html">Virtual Movie</a></li>
 			</ul>
 		</li>
-		<!--<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>-->
+		<li title="Learn About Us!" class="submenu"><a href="aboutus.html">About Us</a>-->
 		<li title="How to Contact Us" class="submenu"><a href="mailto:virtual.voyage.business@gmail.com?Subject=More Information" target="_top">Contact Us</a>
 	</ul>
 	<div class="footer">Website made by <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Benjamin Hargrave</a>, Copyright &copy; 2017 <a title="Email Me!" href="mailto:virtual.voyage.business@gmail.com?Subject=Hi" target="_top">Virtual Voyage</a></div>
